--- a/Project 2_Marketing_ynb.ipynb
+++ b/Project 2_Marketing_ynb.ipynb
@@ -8223,6 +8223,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The best model out of the above all was XGBoost(xgb5 or xgb6): with ROC_AUC score: 77.57% and next best model is RandomForest:with ROC_AUC score: 76.23%  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 111,
    "metadata": {},
@@ -8248,27 +8255,21 @@
    "source": [
     "from sklearn.model_selection import cross_val_score \n",
     "scores=cross_val_score(xgb6,x_train,y_train,scoring='roc_auc',\n",
-    "                      verbose=20,n_jobs=-1,cv=10) "
+    "                      verbose=20,n_jobs=-1,cv=10) \n",
+    "\n",
+    "scores.mean() ,scores.std() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.7757024336376219, 0.03304632780752533)"
-      ]
-     },
-     "execution_count": 112,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "scores.mean() ,scores.std() "
+    "# predicting the classes using XGBoost Classifier \n",
+    "predictions_xgb_marketing=pd.DataFrame({'V86':xgb6.predict(x_test)})\n",
+    "\n",
+    "predictions_xgb_marketing.to_csv('marketing_xgb_pred.csv',index=False)"
    ]
   }
  ],
